option java_package = "com.twock.remoterun.common.proto";

message ServerToClient {
  required MessageType messageType = 1;
  optional RunCommand runCommand = 2;
  optional bytes stdinFragment = 3;

  enum MessageType {
    RUN_COMMAND = 1; // runCommand populated
    STDIN_FRAGMENT = 2; // stdinFragment populated
  }

  message RunCommand {
    required int64 requestId = 1;
    required string cmd = 2;
    repeated string args = 3;
    repeated Environment environment = 4;

    message Environment {
      required string key = 1;
      required string value = 2;
    }
  }

  message StdinFragment {
    required int64 requestId = 1;
    optional bytes fragment = 2;
  }
}

message ClientToServer {
  required MessageType messageType = 1;
  optional int64 requestId = 2;
  optional bytes fragment = 3;
  optional sint32 exitCode = 4; // -1 means it failed to start
  optional string exitReason = 5; // only supplied if it failed to start

  enum MessageType {
    STARTED = 1; // requestId populated
    STDOUT_FRAGMENT = 2; // requestId and fragment populated
    STDERR_FRAGMENT = 3; // requestId and fragment populated
    EXITED = 4; // requestId and exitCode populated
  }
}